run.log
   Compiling deno_websocket v0.226.0
   Compiling denokv_sqlite v0.12.0
   Compiling deno_cache v0.153.0
   Compiling deno_node v0.159.0
   Compiling deno_webstorage v0.216.0
   Compiling ext_plugin v0.5.5 (/workspaces/Sapphillon-Core/ext_plugin)
error[E0599]: no function or associated item named `init_ops` found for struct `sapphillon_runtime` in the current scope
  --> ext_plugin/build.rs:29:50
   |
13 | /     extension!(
14 | |         sapphillon_runtime,
15 | |         esm_entry_point = "ext:sapphillon_runtime/runtime.js",
16 | |         esm = ["src/runtime.js"]
17 | |     );
   | |_____- function or associated item `init_ops` not found for this struct
...
29 |               extensions: vec![sapphillon_runtime::init_ops()],
   |                                                    ^^^^^^^^ function or associated item not found in `sapphillon_runtime`
   |
help: there is an associated function `init` with a similar name
   |
29 -             extensions: vec![sapphillon_runtime::init_ops()],
29 +             extensions: vec![sapphillon_runtime::init()],
   |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `ext_plugin` (build script) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
